Fix column names in mobile view, fix overflow issues for tooltips and popovers

--- a/html/themes/custom/common_design_subtheme/sass/ghi/_ghi-tooltips.scss
+++ b/html/themes/custom/common_design_subtheme/sass/ghi/_ghi-tooltips.scss
@@ -22,6 +22,10 @@
       vertical-align: middle;
     }
   }
+
+  td.project-counter & {
+    min-width: 20rem;
+  }
 }
 
 .d3-sparkline-tooltip {
